<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SancionActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/principal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">



            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtl_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                app:hintTextAppearance="@style/styleTextInputLayout">

                <EditText
                    android:id="@+id/et_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:textStyle="bold"
                    android:inputType="text"
                    android:maxLength="50"
                    android:enabled="false"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtl_matricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                app:hintTextAppearance="@style/styleTextInputLayout">

                <EditText
                    android:id="@+id/et_matricula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/matricula"
                    android:inputType="text"
                    android:textStyle="bold"
                    android:maxLength="50"
                    android:enabled="false"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtl_estatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                app:hintTextAppearance="@style/styleTextInputLayout">

                <EditText
                    android:id="@+id/et_estatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/estatus"
                    android:inputType="text"
                    android:enabled="false"
                    android:textStyle="bold"
                    android:maxLength="50"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtl_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                app:hintTextAppearance="@style/styleTextInputLayout">

                <EditText
                    android:id="@+id/et_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Fecha"
                    android:inputType="text"
                    android:enabled="false"
                    android:maxLength="50"
                    android:textStyle="bold"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/txtnumSancion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Sancionado por:"
                android:textColor="@color/azulTapia"
                android:paddingBottom="5dp"/>

            <Spinner
                android:id="@+id/spinnerNumSancion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0px"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:textColor="@color/azulTapia"
                    android:text=" falta(s) al reglamento"/>

                <Button
                    android:id="@+id/btn_faltas"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="ok" />
            </LinearLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtl_otrasSanciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                app:hintTextAppearance="@style/styleTextInputLayout">

                <EditText
                    android:id="@+id/et_otrasSanciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/otras_sanciones"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtl_observaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                app:hintTextAppearance="@style/styleTextInputLayout">

                <EditText
                    android:id="@+id/et_observaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/observaciones"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtSancion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Sancion que Aplica:"
                android:textColor="@color/azulTapia"
                 />

            <Spinner
                android:id="@+id/spinnerSancion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/bt_GuardarSan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:layout_weight="1"
                android:clickable="true"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@android:drawable/ic_menu_send" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>